Update website elements

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ https://templatemo.com/tm-568-digimedia
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/AdaptAIlogo.jpeg" alt="" class="">
+              <img src="assets/images/AdaptAILogo.png" alt="" class="">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -83,10 +83,8 @@ https://templatemo.com/tm-568-digimedia
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
               <li class="scroll-to-section"><a href="#services">Services</a></li>
-              <li class="scroll-to-section"><a href="#portfolio">Projects</a></li>
-              <li class="scroll-to-section"><a href="#blog">Blog</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li> 
-              <li class="scroll-to-section"><div class="border-first-button"><a href="#schedule">Schedule</a></div></li> 
+              <li class="scroll-to-section"><div class="border-first-button"><a href="#schedule">Training Schedule</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -234,28 +232,28 @@ https://templatemo.com/tm-568-digimedia
             <div class="grid">
               <div class="row">
                 <div class="col-lg-12">
-                  <div class="menu">
+                  <div id="service-icons" class="menu">
                     <div class="first-thumb active">
                       <div class="thumb">
-                        <span class="icon"><img src="assets/images/service-icon-01.png" alt=""></span>
+                        <span class="icon"><img src="assets/images/AI Icon.png" alt=""></span>
                         <p><b>AI Innovations</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
-                        <span class="icon"><img src="assets/images/service-icon-02.png" alt=""></span>
+                        <span class="icon"><img src="assets/images/martech icon.png" alt=""></span>
                         <p><b>MarTech &amp; AdTech</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
-                        <span class="icon"><img src="assets/images/service-icon-03.png" alt=""></span>
+                        <span class="icon"><img src="assets/images/learning icon.png" alt=""></span>
                         <p><b>Learning &amp; User Enablement</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
-                        <span class="icon"><img src="assets/images/service-icon-04.png" alt=""></span>
+                        <span class="icon"><img src="assets/images/mentorship icon.png" alt=""></span>
                         <p><b>Mentorship</b></p>
                       </div>
                     </div>
@@ -267,20 +265,17 @@ https://templatemo.com/tm-568-digimedia
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-9 align-self-center">
                               <div class="left-text">
                                 <h4>AI Innovations for Businesses</h4>
-                                <p>Turning AI into an ally for business excellence. From seamless chatbots to memorable
-                                  user experiences and powerful generative AI, we create solutions that redefine what’s
+                                <p>Turning AI into an ally for business excellence. From <span class="keywords">seamless</span> chatbots to memorable
+                                  <span class="keywords">user experiences</span> and powerful generative AI, we create solutions that <span class="keywords">redefine</span> what’s
                                   possible.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
-                                  <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
                               </div>
                             </div>
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-3 align-self-center">
                               <div class="right-image">
-                                <img src="assets/images/services-image.jpg" alt="">
+                                <img src="assets/images/AI.png" alt="">
                               </div>
                             </div>
                           </div>
@@ -291,20 +286,17 @@ https://templatemo.com/tm-568-digimedia
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-9 align-self-center">
                               <div class="left-text">
                                 <h4>MarTech &amp; AdTech</h4>
-                                <p>Drive engagement with tech-forward strategies that connect, captivate, and convert.
+                                <p>Drive engagement with tech-forward strategies that <span class="keywords">connect</span>, <span class="keywords">captivate</span>, and <span class="keywords">convert</span>.
                                   MarTech and AdTech solutions designed to make every dollar work harder and every
                                   impression last longer.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
-                                  <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
                               </div>
                             </div>
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-3 align-self-center">
                               <div class="right-image">
-                                <img src="assets/images/services-image-02.jpg" alt="">
+                                <img src="assets/images/martech.jpg" alt="">
                               </div>
                             </div>
                           </div>
@@ -315,17 +307,14 @@ https://templatemo.com/tm-568-digimedia
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-9 align-self-center">
                               <div class="left-text">
-                                <h4>Impactful Learning &amp; User Enablement</h4>
-                                <p>Where learning meets impact. Through engaging simulations, interactive gaming, and
-                                  hands-on workshops, we turn knowledge into action and learners into leaders.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
-                                  <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
+                                <h4>Learning &amp; User Enablement</h4>
+                                <p>Where learning meets <span class="keywords">impact</span>. Through engaging simulations, <span class="keywords">interactive</span> gaming, and
+                                  hands-on workshops, we turn knowledge into <span class="keywords">action</span> and learners into leaders.</p>
                               </div>
                             </div>
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-3 align-self-center">
                               <div class="right-image">
                                 <img src="assets/images/services-image-03.jpg" alt="">
                               </div>
@@ -338,19 +327,16 @@ https://templatemo.com/tm-568-digimedia
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-9 align-self-center">
                               <div class="left-text">
                                 <h4>Mentorship</h4>
-                                <p>Fueling the next generation of innovators through mentorship. We open doors, offer
-                                  guidance, and inspire the minds that will shape the future.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
-                                  <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
+                                <p>Fueling the next generation of <span class="keywords">innovators</span> through mentorship. We open doors, offer
+                                  guidance, and <span class="keywords">inspire</span> the minds that will shape the <span class="keywords">future</span>.</p>
                               </div>
                             </div>
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-3 align-self-center">
                               <div class="right-image">
-                                <img src="assets/images/services-image-04.jpg" alt="">
+                                <img src="assets/images/mentorship.png" alt="">
                               </div>
                             </div>
                           </div>
@@ -372,20 +358,15 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-4 offset-lg-4">
           <div class="section-heading  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
-            <h6>Get Your Free Quote</h6>
+            <h6>Get Your Quote</h6>
             <h4>Grow With Us Now</h4>
             <div class="line-dec"></div>
           </div>
         </div>
         <div class="col-lg-8 offset-lg-2  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
-          <form id="search" action="#" method="GET">
+          <form id="search" action="https://formsubmit.co/info@adaptai.tech" method="post">
             <div class="row">
-              <div class="col-lg-4 col-sm-4">
-                <fieldset>
-                  <input type="web" name="web" class="website" placeholder="Your website URL..." autocomplete="on" required>
-                </fieldset>
-              </div>
-              <div class="col-lg-4 col-sm-4">
+              <div class="col-lg-8 col-sm-8">
                 <fieldset>
                   <input type="address" name="address" class="email" placeholder="Email Address..." autocomplete="on" required>
                 </fieldset>
@@ -394,6 +375,9 @@ https://templatemo.com/tm-568-digimedia
                 <fieldset>
                   <button type="submit" class="main-button">Get Quote Now</button>
                 </fieldset>
+              </div>
+              <div>
+                <input type="hidden" name="subject" value="REQUESTING FOR QUOTE">
               </div>
             </div>
           </form>
@@ -406,12 +390,11 @@ https://templatemo.com/tm-568-digimedia
     <table class="table table-bordered training-calendar">
         <thead>
             <tr>
-                <th colspan="6">2024/2025 Training Calender</th>
+                <th colspan="6">2025 Training Calender</th>
             </tr>
             <tr>
                 <th>Master class</th>
                 <th>Duration (Days)</th>
-                <th>Nov-Dec 2024</th>
                 <th>Jan-25</th>
                 <th>Feb-25</th>
                 <th>Mar-25</th>
@@ -421,7 +404,6 @@ https://templatemo.com/tm-568-digimedia
             <tr>
                 <td>AI for Marketing & Advertising</td>
                 <td>3</td>
-                <td>2nd - 4th Dec</td>
                 <td></td>
                 <td>3rd-5th</td>
                 <td></td>
@@ -429,7 +411,6 @@ https://templatemo.com/tm-568-digimedia
             <tr>
                 <td>Journey to Cloud: what's at stake</td>
                 <td>2</td>
-                <td></td>
                 <td>20th - 21st</td>
                 <td>17th - 18th</td>
                 <td>17th - 18th</td>
@@ -437,7 +418,6 @@ https://templatemo.com/tm-568-digimedia
             <tr>
                 <td>AI for Government: Adoption, Security & Innovation</td>
                 <td>3</td>
-                <td></td>
                 <td>22nd - 24th</td>
                 <td>19th - 21st</td>
                 <td>19th - 21st</td>
@@ -445,7 +425,6 @@ https://templatemo.com/tm-568-digimedia
             <tr>
                 <td>Apex AI Master Class (Oracle)</td>
                 <td>2</td>
-                <td></td>
                 <td>20th - 21st</td>
                 <td>17th - 18th</td>
                 <td>17th - 18th</td>
@@ -453,7 +432,6 @@ https://templatemo.com/tm-568-digimedia
             <tr>
                 <td>Governance Risk & Compliance Tools (Oracle)</td>
                 <td>3</td>
-                <td></td>
                 <td>27th - 29th</td>
                 <td></td>
                 <td>24th - 26th</td>
@@ -461,7 +439,6 @@ https://templatemo.com/tm-568-digimedia
             <tr>
                 <td>Programmatic and Out-of-Home (OOH) Advertising</td>
                 <td>2</td>
-                <td>5th - 7th</td>
                 <td></td>
                 <td>6th - 7th</td>
                 <td></td>
@@ -469,7 +446,6 @@ https://templatemo.com/tm-568-digimedia
             <tr>
                 <td>Mastering Digital Transformation Project Management: Leveraging AI for Smarter Project Outcomes</td>
                 <td>3</td>
-                <td></td>
                 <td></td>
                 <td>24th - 26th</td>
                 <td></td>
@@ -480,7 +456,6 @@ https://templatemo.com/tm-568-digimedia
           <tr>
               <th>Webinars</th>
               <th>Duration</th>
-              <th>Nov-Dec 2024</th>
               <th>Jan-25</th>
               <th>Feb-25</th>
               <th>Mar-25</th>
@@ -490,7 +465,6 @@ https://templatemo.com/tm-568-digimedia
         <tr>
           <td>Transforming SaaS: Embedding AI for Smarter, Scalable Solutions</td>
           <td>Free webinar 2 hours</td>
-          <td></td>
           <td>15th</td>
           <td></td>
           <td>13th</td>
@@ -498,7 +472,6 @@ https://templatemo.com/tm-568-digimedia
         <tr>
           <td>Is Data the new oil for AI?</td>
           <td>Free webinar 2 hours</td>
-          <td></td>
           <td>15th</td>
           <td></td>
           <td>13th</td>
@@ -506,7 +479,6 @@ https://templatemo.com/tm-568-digimedia
         <tr>
           <td>The Future of Digital Marketing: Unpacking Trends, Tools and Techniques for Success</td>
           <td>Free webinar 2 hours</td>
-          <td>19th Nov</td>
           <td></td>
           <td></td>
           <td>13th</td>
@@ -514,7 +486,6 @@ https://templatemo.com/tm-568-digimedia
         <tr>
           <td>Marketing That Sells: Secrets to Creating Irresistible Campaigns That Drive Results</td>
           <td>Free webinar 2 hours</td>
-          <td>19th Nov</td>
           <td></td>
           <td></td>
           <td>13th</td>
@@ -699,7 +670,7 @@ https://templatemo.com/tm-568-digimedia
           </div>
         </div>
         <div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="" method="post">
+          <form id="contact" action="https://formsubmit.co/info@adaptai.tech" method="post">
             <div class="row">
               <div class="col-lg-12">
                 <div class="contact-dec">
