Update training schedule

--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@ https://templatemo.com/tm-568-digimedia
             <tr>
                 <th>Master class</th>
                 <th>Duration (Days)</th>
-                <th>Jan-25</th>
-                <th>Feb-25</th>
                 <th>Mar-25</th>
+                <th>Apr-25</th>
+                <th>May-25</th>
             </tr>
         </thead>
         <tbody>
@@ -406,50 +406,50 @@ https://templatemo.com/tm-568-digimedia
                 <td>AI for Marketing & Advertising</td>
                 <td>3</td>
                 <td></td>
-                <td>3rd-5th</td>
-                <td></td>
+                <td>2nd-4th</td>
+                <td>5th-7th</td>
             </tr>
             <tr>
                 <td>Journey to Cloud: what's at stake</td>
                 <td>2</td>
-                <td>20th - 21st</td>
                 <td>17th - 18th</td>
-                <td>17th - 18th</td>
+                <td>9th - 10th</td>
+                <td>12th - 13th</td>
             </tr>
             <tr>
                 <td>AI for Government: Adoption, Security & Innovation</td>
                 <td>3</td>
-                <td>22nd - 24th</td>
                 <td>19th - 21st</td>
-                <td>19th - 21st</td>
+                <td>14th - 16th</td>
+                <td>14th - 16th</td>
             </tr>
             <tr>
                 <td>Apex AI Master Class</td>
                 <td>2</td>
-                <td>20th - 21st</td>
                 <td>17th - 18th</td>
-                <td>17th - 18th</td>
+                <td>22nd - 23rd</td>
+                <td>19th - 20th</td>
             </tr>
             <tr>
                 <td>Governance Risk & Compliance Tools</td>
                 <td>3</td>
-                <td>27th - 29th</td>
-                <td></td>
                 <td>24th - 26th</td>
+                <td></td>
+                <td>21st - 23rd</td>
             </tr>
             <tr>
                 <td>Programmatic and Out-of-Home (OOH) Advertising</td>
                 <td>2</td>
                 <td></td>
-                <td>6th - 7th</td>
-                <td></td>
+                <td>24th - 25th</td>
+                <td>26th - 27th</td>
             </tr>
             <tr>
                 <td>Mastering Digital Transformation Project Management: Leveraging AI for Smarter Project Outcomes</td>
                 <td>3</td>
                 <td></td>
-                <td>24th - 26th</td>
-                <td></td>
+                <td>28th - 30th</td>
+                <td>28th - 30th</td>
             </tr>
         </tbody>
         <thead>
@@ -457,24 +457,31 @@ https://templatemo.com/tm-568-digimedia
           <tr>
               <th>Webinars</th>
               <th>Duration</th>
-              <th>Jan-25</th>
-              <th>Feb-25</th>
               <th>Mar-25</th>
+              <th>Apr-25</th>
+              <th>May-25</th>
           </tr>
       </thead>
       <tbody>
         <tr>
+          <td>AI Uncovered: How Artificial Intelligence is Changing the World </td>
+          <td>Free webinar 2 hours</td>
+          <td>27th </td>
+          <td>1st</td>
+          <td>2nd</td>
+        </tr>
+        <tr>
           <td>Transforming SaaS: Embedding AI for Smarter, Scalable Solutions</td>
           <td>Free webinar 2 hours</td>
-          <td>15th</td>
-          <td></td>
-          <td>13th</td>
+          <td>/td>
+          <td>8th</td>
+          <td>9th</td>
         </tr>
         <tr>
           <td>Is Data the new oil for AI?</td>
           <td>Free webinar 2 hours</td>
-          <td>15th</td>
           <td></td>
+          <td>11th</td>
           <td>13th</td>
         </tr>
         <tr>
@@ -482,14 +489,14 @@ https://templatemo.com/tm-568-digimedia
           <td>Free webinar 2 hours</td>
           <td></td>
           <td></td>
-          <td>13th</td>
+          <td>16th</td>
         </tr>
         <tr>
           <td>Marketing That Sells: Secrets to Creating Irresistible Campaigns That Drive Results</td>
           <td>Free webinar 2 hours</td>
           <td></td>
-          <td></td>
-          <td>13th</td>
+          <td>23rd</td>
+          <td>23rd</td>
         </tr>
       </tbody>
     </table>
